apps/artskorner-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artskorner-api
  labels:
    app: artskorner-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: artskorner-api
  template:
    metadata:
      labels:
        app: artskorner-api
    spec:
      containers:
        - name: artskorner-api
          image: ghcr.io/igh9410/artskorner-api
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: ghcr-image-pull-secrets
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: artskorner-api
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: artskorner-api
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
